# OpenLivestockTracking

./: .gitignore  LICENSE  PrototypeLogger_V1  README.md
.github/workflows/: zephyrlogger-uf2.yml
Firmware/AccOnlyRingPowerTest/: AccOnlyRingPowerTest.ino
Firmware/ArduinoLogger/: ArduinoLogger.ino  README.md
Firmware/ItsyBitsyDeepSleepBlink/: ItsyBitsyDeepSleepBlink.ino
Firmware/PrototypeLogger_V1/: PrototypeLogger_V1.ino
Firmware/SBASProbe/: SBASProbe.ino
Firmware/ZephyrLogger/: CMakeLists.txt  Kconfig  README.md  acc_diag_led.conf  acc_only.conf  app.overlay  ble_stack_off.conf  gps_sd.conf  prj.conf  west.yml
Firmware/ZephyrLogger/src/: main.c  olg_adxl345.c  olg_adxl345.h  olg_ble.c  olg_ble.h  olg_bt.c  olg_bt.h  olg_config.c  olg_config.h  olg_event.h  olg_gateway.c  olg_gateway.h  olg_gps.c  olg_gps.h  olg_log_format.h  olg_power.c  olg_power.h  olg_ring.c  olg_ring.h  olg_sd.c  olg_sd.h  olg_storage.c  olg_storage.h  olg_time.c  olg_time.h
Gateway/RaspberryPi/: README.md  ensure_bluetooth.sh  install_services.sh  olg_dashboard.py  olg_gateway.py  olg_log_convert.py  olg_log_format.py  requirements.txt  run_dashboard.sh  run_gateway.sh  setup_pi.sh
